--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,24 @@
 }
 
 #a {
-    
+    background-color: aqua;
+    grid-column: 1 / span 2;
+}
+
+#b {
+    background-color: rgb(0, 255, 204);
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+#c {
+    background-color: rgb(204, 0, 255);
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+#d {
+    background-color: rgb(0, 255, 204);
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
 }
